<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/work_out" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/member_infomation"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView5"
            style="@style/subtitle_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/small_data"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="195dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ID_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:hint="아이디"
                android:textColor="@color/black"
                android:textColorHint="@color/colorGray"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/NAME_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:hint="이름"
                android:textColor="@color/black"
                android:textColorHint="@color/colorGray"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/BIRTH_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="생일"
                android:textColor="@color/black"
                android:textColorHint="@color/colorGray"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/GENDER_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="성별"
                android:textColor="@color/black"
                android:textColorHint="@color/colorGray"
                android:textSize="18sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/height"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/height"
            android:inputType="number"
            android:maxLength="3"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/weight"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/weight"
            android:inputType="number"
            android:maxLength="3"
            android:textColorHint="@color/black" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="저장하기" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>